k8s/bot_service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot-deployment
  labels:
    app: bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bot
  template:
    metadata:
     labels:
       app: bot
    spec:
      containers:
        - name: bot
          image: bot-image
          imagePullPolicy: Never
          ports:
            - containerPort: 80
