k8s/bot_service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bot-service
spec:
  type: ClusterIP
  selector:
    app: bot-service
  ports:
    - port: 80
      targetPort: 8080
